set activeSplitter z-index to 11 since tabs have 10, fixes #7136
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@14359 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -696,6 +696,11 @@ body .dijitAlignClient { position: absolute; }
 	border-width: 0;
 	z-index: 10 !important;
 }
+
+.dijitSplitterActive {
+	z-index: 11 !important;
+}
+
 .dijitSplitterCover{
 	position:absolute;
 	z-index:1;
